[package]
name = "crm-send"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.10.0", features = ["v4"] }


[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
proto-builder-trait = { workspace = true }
tonic-build = { workspace = true }

[dev-dependencies]
fake = { workspace = true }
nanoid = "0.4.0"
