[package]
name = "crm-send"
version = "0.1.0"
edition = "2021"

[features]
default = []
test_utils = ["fake", "nanoid"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
crm-metadata = { workspace = true }
derive_builder = { workspace = true }
fake = { workspace = true, features = ["derive", "chrono"], optional = true }
futures = { workspace = true }
itertools = { workspace = true }
nanoid = { version = "0.4.0", optional = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }


[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
proto-builder-trait = { workspace = true }
tonic-build = { workspace = true }

[dev-dependencies]
crm-send = { workspace = true, features = ["test_utils"] }
